# tetrust

./: .gitignore  Cargo.toml  README.md
src/: curses_input.rs  curses_renderer.rs  error.rs  input.rs  main.rs  renderer.rs  subsystem.rs
src/game/: board.rs  mod.rs  polyomino.rs  state.rs
